footer section extra added

--- a/styles/style.css
+++ b/styles/style.css
@@ -247,6 +247,57 @@ figcaption{
   padding: 10px 10px 10px 0px;
 }
 /* footer style */
+footer{
+  background: #0B0223;
+  height: 636px;
+  padding: 120px 0px 130px 0px;
+  color: white;
+}
+.footer-logo-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.footer-logo-container h3{
+  color: #FFF;
+  font-size: 45px;
+  margin-bottom: 46px;
+}
+.footer-logo-container img{
+  width: 86.041px;
+  height: 40px;
+}
+.functionality, .rules{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 60px;
+  margin: 66px 0px 56px 0px;
+}
+.rules{
+  margin-bottom: 28px;
+}
+.rules li{
+  font-size: 16px;
+  font-weight: 500;
+}
+li{
+   list-style: none;
+   font-size: 18px;
+}
+.icons{
+  gap: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 74px;
+}
+footer p{
+  font-size: 16px;
+  font-weight: 500px;
+  text-align: center;
+}
 
 
 
