--- a/styles/style.css
+++ b/styles/style.css
@@ -170,7 +170,48 @@ main{
   display: flex;
   justify-content: center;
   gap: 24px;
-  
+}
+.image-wrapper {
+  position: relative;
+  margin-right: 10px;
+  overflow: hidden;
+}
+
+.video-section img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.3s ease;
+  border: 4px solid #e19c89;
+}
+
+.play-button {
+  margin-top: 60px;
+  color: #fff;
+  font-size: 36px;
+}
+.watch-now {
+  color: #dd4cc2;
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 10px;
+}
+.image-wrapper:hover .overlay {
+  opacity: 1;
 }
 figure{
   margin: 0px;
@@ -179,9 +220,7 @@ figure{
   width: 342px;
   height: 400px;
 }
-.video-items img:hover{
 
-}
 figcaption{
   text-align: left;
   margin-top: 24px;
@@ -230,7 +269,6 @@ figcaption{
   justify-content: center;
   align-items: center;
   gap: 16px;
-  /* border: 2px solid black; */
   border-radius: 50px;
   background: #FFF;
   width: 243px;
@@ -300,201 +338,213 @@ footer p{
   text-align: center;
 }
 /* responsive design by media query */
-@media screen and  (max-width:576px) {
-  body{
+/* Responsive Styles */
+
+/* Small screens (phones) */
+@media screen and (max-width: 576px) {
+  body {
     padding: 20px;
   }
+  .logo {
+    justify-content: center;
+  }
+
   .nav-container,
-  .banner-container
-  {
+  .banner-container {
     padding: 20px;
   }
-  .banner2-container{
+
+  .banner2-container {
     padding: 0px;
     gap: 10px;
   }
-  .logo{
+
+  .logo {
     justify-content: center;
   }
-  .banner-semi-title{
+
+  .banner-semi-title {
     margin: 0px;
+    font-size: 2.4rem;
   }
+
+  .banner-title {
+    font-size: 2.8rem;
+  }
+
   .banner-image img,
-  .banner2-container img
-  {
-    width: 311px;
-    height: 350px;
-    padding: 0px;
+  .banner2-container img {
+    width: 100%;
+    height: auto;
   }
-  .banner2-content h3{
-    margin: 0px;
-    padding: 0px;
-    width: 80%;
+
+  .banner2-content {
     text-align: center;
   }
-  .banner-container{
-    padding: 0% 50%;
+
+  .banner2-content h3 {
+    margin: 0px;
+    padding: 0px;
+    font-size: 28px;
   }
-  .banner2-content p{
+
+  .banner2-content p {
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+  }
+
+  .banner2-content button {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .banner2-purpose {
+    margin: 0px;
+    font-size: 24px;
+  }
+
+  .button2 {
+    margin-left: 0px;
+    margin-bottom: 20px;
+  }
+
+  main {
+    padding: 40px 20px;
+    margin-bottom: 0px;
+  }
+
+  .play-container {
+    gap: 20px;
+    height: auto;
+    margin-top: 100px;
+  }
+
+  .play-content {
+    margin: 0px;
     width: 100%;
     text-align: center;
   }
-  .banner2-content button{
-    margin-right: 75px;
-    margin-bottom: 40px;
-  }
-  .banner2-purpose{
-    margin: 0px;
-  }
-  .button2{
-    margin-left: 0px;
 
+  .play-image .img2 {
+    display: none;
   }
-  main{
-    padding: 100px 0px;
-    margin-bottom: 0px;
+
+  .play-image img {
+    width: 100%;
   }
-  .play-container{
-    gap: 20px;
-    height: auto;
-    margin-top: 700px;
-  }
-  .play-content{
-    margin: 0px;
-    width: 300px;
-    text-align: center;
-  }
-  .play-image .img2{
-    position: static;
-  }
-  .play-image img{
-    width: 70%;
-  }
-  .feature-container, .functionality, .icons, .rules {
+
+  .feature-container,
+  .functionality,
+  .icons,
+  .rules {
     flex-wrap: wrap;
     padding: 0px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
   }
-  
+
   .nav-container,
   .menus,
   .banner2-container,
-  .video-items
-  {
+  .video-items {
     flex-direction: column;
   }
+
   .banner-container,
-  .play-container
-  {
+  .play-container {
     flex-direction: column-reverse;
   }
 }
-@media screen and  (min-width:577px) and (max-width:992px) {
-  body{
-    padding: 20px;
-  }
-  .nav-container,
-  .banner-container
-  {
-    padding: 20px;
-  }
-  .banner2-container{
-    padding: 0px;
-    gap: 10px;
-  }
-  .logo{
-    justify-content: center;
-  }
-  .banner-semi-title{
-    margin: 0px;
-  }
-  .banner-image img,
-  .banner2-container img
-  {
-    width: 311px;
-    height: 350px;
-    padding: 0px;
-  }
-  .banner2-content h3{
-    margin: 0px;
-    padding: 0px;
-    width: 80%;
-    text-align: center;
-  }
-  .banner-container{
-    padding: 0% 50%;
-  }
-  .banner2-content p{
-    width: 100%;
-    text-align: center;
-  }
-  .banner2-content button{
-    margin-right: 75px;
-    margin-bottom: 40px;
-  }
-  .banner2-purpose{
-    margin: 0px;
-  }
-  .button2{
-    margin-left: 0px;
 
+/* Medium screens (tablets) */
+@media screen and (min-width: 577px) and (max-width: 991px) {
+  body {
+    padding: 30px;
   }
-  main{
-    padding: 100px 0px;
+
+  .nav-container,
+  .banner-container {
+    padding: 30px;
+  }
+
+  .banner2-container {
+    padding: 0px;
+    gap: 20px;
+  }
+
+  .banner-image img,
+  .banner2-container img {
+    width: 100%;
+    height: auto;
+  }
+
+  .banner2-content h3 {
+    font-size: 36px;
+  }
+
+  .banner2-content p {
+    font-size: 18px;
+  }
+
+  .banner2-content button {
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
+
+  .banner2-purpose {
+    font-size: 28px;
+  }
+
+  .button2 {
+    margin-left: 0px;
+    margin-bottom: 30px;
+  }
+
+  main {
+    padding: 60px 30px;
     margin-bottom: 0px;
   }
-  .play-container{
-    gap: 20px;
+
+  .play-container {
+    gap: 30px;
     height: auto;
-    margin-top: 700px;
+    margin-top: 150px;
   }
-  .play-content{
-    margin: 0px;
-    margin-left: 50px;
-    width: 600px;
-    text-align: center;
-  }
-  
-  .feature-container, .functionality, .icons, .rules {
-    flex-wrap: wrap;
-    padding: 0px;
-    margin-bottom: 50px;
-  }
-  .play-image{
-    margin: 300px 0px 0px 40px;
-  }
-  .menus{
-    gap: 10px;
-  }
-  .banner-container{
-    padding: 50px 0px;
-  }
-  .banner2-container p{
-    text-align: right;
-  }
-  .banner2-container h3{
+
+  .play-content {
     margin: 0px;
     width: 100%;
-    padding: 0px;
-    text-align: right;
-  }
-  .banner2-container img{
-    width: 50%;
-  }
-  
-  .video-items
-  {
-    flex-direction: column;
-  }
-  
-  .play-container
-  {
-    flex-direction: column-reverse;
-  }
-  figcaption{
     text-align: center;
   }
+
+  .play-image .img2 {
+    display: none;
+  }
+
+  .play-image img {
+    width: 100%;
+  }
+
+  .video-items img {
+    width: 100%;
+    height: 280px;
+  }
+
+  .feature-container,
+  .functionality,
+  .icons,
+  .rules {
+    flex-wrap: wrap;
+    padding: 0px;
+    margin-bottom: 40px;
+  }
+
+  .banner-container,
+  .play-container {
+    flex-direction: column-reverse;
+  }
 }
+
 
 
 
